# infengine

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  README.md  config.h  decode.cu  decode.cuh  kernel.cu  kernel.cuh  main.cpp  manager.cpp  manager.h  prefill.cu  prefill.cuh  spec_decode.cu  spec_decode.cuh  tardis.cu  tardis.cuh  tardis_drafter.cu  verify.cu  verify.cuh
kernels/: attn.cu  attn.cuh  attn_permute.cu  attn_permute.cuh  emblookup.cu  emblookup.cuh  ffn.cu  ffn.cuh  lm_head.cu  lm_head.cuh  model_weights.cu  model_weights.cuh  multiply_by_weight.cuh  residual_add.cu  residual_add.cuh  rmsnorm.cu  rmsnorm.cuh  rope.cu  rope.cuh  sampling.cu  sampling.cuh  softmax.cu  softmax.cuh  swiglu.cu  swiglu.cuh
scripts/: generate_test_data.py
tests/: test_attn.cu  test_emblookup.cu  test_ffn.cu  test_modelweights.cu  test_residualadd.cu  test_rmsnorm.cu  test_rope.cu  test_sampling.cu  test_scalesoftmax.cu  test_swiglu.cu  test_utils.cpp  test_utils.h
